# jlens-qwen36

./: .gitignore  CLAUDE.md  LICENSE  PERFORMANCE.md  PERFORMANCE_REVIEW.md  README.md  pyproject.toml  sitecustomize.py
.handoff/: analytic-attention-branch.RESPONSE.md  analytic-attention-branch.md  gbeta-results.txt  measure-gbeta-gap.RESPONSE.md  measure-gbeta-gap.md  verify-results.txt  verify-wire-refit.md
docs/: intervention-search-zero-recipes.md  interventions.md  lenses.md  session-view-state.md
jlens_qwen/: analytic_attn.py  analytic_layer.py  custom_gdn_patch.py  custom_gdn_vjp.py  fit.py  fit_analytic.py  gdn_backward.py  interventions.py  lens.py  model.py  patch_gdn.py  perf.py  serve.py
scripts/: bench_decode.py  benchmark_intervention_search.py  benchmark_planner_latency.py  e2e_intervention_playwright.cjs  export_static.py  gen_decode_gate_golden.py  intervention_sanity.py  measure_bands.py  measure_gbeta_gap.py  run_experiments.py  run_fit.py  smoke_model.py  spike_jacobian.py  spike_jacobian_v2.py  verify_analytic_layer.py  workspace_range.py
tests/: test_analytic_attention.py  test_chain_indexing.py  test_decode_gate.py  test_intervention_mapping.py  test_intervention_ops.py  test_intervention_scan.py  test_intervention_search.py  test_intervention_search_adaptive.py  test_intervention_search_benchmark.py  test_intervention_search_premise.py  test_intervention_spec.py  test_intervention_stream.py  test_lens_resolution.py  test_planner_benchmark_corpus.py  test_planner_probe.py  test_web_adaptive_search_contract.py
web/: index.html
(+21 files in other folders)
