[project]
name = "jlens-qwen36"
version = "0.1.0"
description = "Jacobian lens / J-space visualizer for Qwen3.6-27B (4-bit, MLX)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.22",
    "mlx-lm==0.31.3",
    "numpy>=2.0",
    "safetensors>=0.4",
    "transformers>=5.0",
    "datasets>=2.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "huggingface-hub>=0.25",
    "torch>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jlens_qwen"]

[tool.uv]
package = true